--- a/Kerala Tourism/style.css
+++ b/Kerala Tourism/style.css
@@ -1,52 +1,49 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body{
-    font-family: 'poppins';
+    font-family: 'Poppins';
 }
 
 main {
     background-image: url('./images/hero-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-}
+    height: 100vh; 
+ }
 
 .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    flex-wrap: wrap;
-    padding: 20px 15px;
-}
-
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        position: relative; 
+        flex-wrap: wrap; 
+        padding: 20px 15px;
+    }
+   
 .navbar-links{
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    gap: 20px;
+    display:flex;
+    gap:20px;
     justify-content: space-around;
     align-items: center;
 }
-
 .nav-link a{
     color: white;
-    text-decoration: none;
+     text-decoration: none;
     font-size: 16px;
-    display: block;
+    display: block; 
 }
-
 .nav-link{
     list-style-type: none;
 }
-
 .navbar-toggler {
-    background: none;
+     background: none;
     border: none;
     color: white;
     font-size: 30px;
@@ -55,14 +52,15 @@ main {
 }
 
 .nav-btn{
-    border: 2px solid #0AAF4F;
+    border: 2px solid  #0AAF4F;
     background-color: rgba(0, 0, 0, 0);
-    padding: 10px;
-    transition: background-color 0.5s ease;
+    padding:10px;
+    transition: background-color 1s ease;
 }
 
 .nav-btn:hover{
-    background-color: #0AAF4F;
+    background-color:#0AAF4F;
+        
 }
 
 #hero-text h1{
@@ -73,12 +71,10 @@ main {
 }
 
 #hero-text {
+    
     text-align: center;
 }
 
-.container{
-    max-width: 1000px;
-}
 
 .btn {
     color: white;
@@ -93,11 +89,11 @@ main {
     transition: 0.5s ease background-color;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #0AAF4F;
 }
 
-.contact-btn {
+.contact-btn  {
     background-color: #0AAF4F;
 }
 
@@ -106,17 +102,15 @@ main {
 }
 
 .container{
-    max-width: 1000px;
+    max-width:1000px;
     margin:0 auto;
 }
-
-.destinations{
+.destinations {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
+    grid-template-columns:repeat(auto-fit,minmax(20rem,1fr));
     gap: 16px;
     padding: 16px;
 }
-
 .destinations article {
     background-color: #fff;
     border: 1px solid #ccc;
@@ -131,14 +125,12 @@ main {
     height: 300px;
     object-fit: cover;
     display: block;
-    overflow: hidden;                     
+    overflow: hidden;
 }
-
 .destinations article:hover{
     cursor: pointer;
-    transform: scale(1.05);
+    transform:scale(1.05);
 }
-
 .destinations article p {
     margin: 0;
     padding: 8px;
@@ -150,37 +142,62 @@ main {
 .districts{
     margin-bottom: 20px;
 }
-
 footer {
     text-align: center;
     margin: 10px 0;
 }
-
 form {
-    display: flex;
+    display:flex;
     align-items: center;
-    flex-direction: column;
-    box-shadow: rgba(0, 0, 0, 0) 0px 5px 15px;
-    margin: 10px auto;
+    flex-direction: column;     
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin: 10px auto;  
     width: max-content;
-    padding: 50px;
+    padding: 50px ;
 }
-
 form input {
-    padding: 10px 50px 10px 10px;
+    padding :10px 50px 10px 10px; 
     width: 100%;
 }
-
-.submit {
-    padding: 10px 20px;
+.submit{
+    padding:10px 20px;
     border-radius: 8px;
     background-color: royalblue;
     border: none;
-    color: white;
+    color:white;
 }
-
 @media (max-width:780px) {
     .districts {
         text-align: center;
+    }
+
+    #hero-text h1 {
+        font-size: 8vw ;
+    }
+    #hero-text a {
+        font-size: 2vw ;
+    }
+}
+
+@media (max-width:600px) {
+    .navbar-links {
+        display: none;
+    }
+
+    .navbar-toggler {
+        display: block;
+    }
+
+    form input {
+    padding :5px 25px 5px 5px; 
+}
+
+    form {
+        padding: 20px;
+    }
+}
+@media (max-width:400px) {
+    #hero-text {
+
     }
 }
